// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render with a list without crashing 1`] = `
<div
  className="Welcome"
>
  <Wall
    hardMode={undefined}
    wall={
      Array [
        2,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ]
    }
  />
  <button
    className="WelcomeAction"
    onClick={[Function]}
    type="button"
  >
    Action
  </button>
</div>
`;

exports[`Welcome should render with an empty list without crashing 1`] = `
<div
  className="Welcome"
>
  <Wall
    hardMode={undefined}
    wall={Array []}
  />
  <button
    className="WelcomeAction"
    onClick={[Function]}
    type="button"
  />
</div>
`;
